Basic initial setup is done

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGO_URL: 'mongodb+srv://Rockstar_777:Rockstar_777@cluster0.2m22q.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+JWT_SECRET: '%40T0KEN2PASS'
